--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,7 +32,7 @@ quoting:
 
 
 seeds:
-  beer_analytics:
+  internal:
     +enabled: true
     seed_beers:
       +column_types:
@@ -47,7 +47,7 @@ seeds:
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  beer_analytics:
+  internal:
       # Applies to all files under models/example/
-      beers:
+      ref_resource:
           materialized: view
