--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -49,4 +49,4 @@ models:
   internal:
       # Applies to all files under models/example/
       ref_resource:
-          materialized: view
+          materialized: table
