change source table to non-shared bucket table

--- a/models/_sources/in.c-test.yml
+++ b/models/_sources/in.c-test.yml
@@ -15,3 +15,9 @@ sources:
             schema: true
             identifier: true
           columns: []
+        - name: workspaces
+          quoting:
+            database: true
+            schema: true
+            identifier: true
+          columns: []
